--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,9 +1,9 @@
 ---
 title: "GSS challange"
-author: "Put your name here!"
-date: "put the date here"
+author: "iboni arhchie "
+date: "Summer 2021"
 output: html_document
----
+-
 
 ```{r include=FALSE,echo=FALSE}
 require(tidyverse)
