--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -1,16 +1,36 @@
 ---
 title: "GSS challange"
-author: "iboni arhchie "
+author: "iboni arhchie"
 date: "Summer 2021"
 output: html_document
--
+---
 
-```{r include=FALSE,echo=FALSE}
-require(tidyverse)
+```{r include=FALSE,echo=FALSE}   
+require(tidyverse)  
 require(tigerstats)
-require(knitr)
+require(knitr)   
 GSS <-read.csv(file="GSScsv.csv",header=TRUE)
 ```
+
+```{r }
+GSSN= select(GSS, ! is.numeric)
+GSSN=purrr::map(GSSN, as.factor)
+GSSN$X<-1:178
+#GSSN = data.frame(GSSN)
+GSS2=select(GSS, is.numeric)
+GSS <- merge(GSSN,GSS2,by="X")
+```
+
+
+
+
+
+
+
+
+
+
+
 
 # Introduction
 
@@ -32,6 +52,22 @@ If not, then whose view differs from whom??
 ### Graphical Descriptive Results
 
 <!--Graphical results here.  Make sure to show your code.  Provide appropriate labels for axes, giving units if possible, and provide a good title for the graph, too.  Use the graphical results to describe the patterns if any that exist in the data as focused toward the research question. Bottom line is to explain the features of the graph that are relevant to conforming or departing to what is expected by your null hypothesis !-->
+
+#### Plot barplots tigerstats way
+
+```{r}
+barchartGC(~RACE + CAPPUN,data=GSS)
+barchartGC(~RACE + CAPPUN,data=GSS, type="percent")
+
+```
+
+The barplot is showing us that African Americans are more oppose to CAPPUN than    
+other or WHITE.   
+
+
+
+
+
 
 ### Numerical Descriptive Results
 
