--- a/FinalReport.rmd
+++ b/FinalReport.rmd
@@ -18,14 +18,6 @@ mutate(across(where(is.character), as.factor))
 
 
 
-
-
-
-
-
-
-
-
 # Introduction
 
 <!--In this section you explain what you are trying to show.  Where did the data come from?  What is the research or other question you are trying to answer?.  If you skimp in this section expect to be marked down in your grade. Paint a picture of the project a couple of paragraphs is expected!-->
@@ -66,6 +58,22 @@ other or WHITE.
 ### Numerical Descriptive Results
 
 <!--Numerical results go here. Use the numerical results to describe the patterns if any that exist in the data as focused toward the research question!-->
+
+### Numerical Summaries  
+
+```{r}
+table1 <- xtabs(~RACE + CAPPUN, data=GSS)
+rowPerc(table1)
+colPerc(table1)
+```
+
+In table 1 that blacks at 34.62% are in favor of CAPPUN while other is at   
+83.22%, and followed by white who are at 68.66%.      
+
+
+
+
+
 
 ## Inferential Results
 
